[package]
name = "ghcr"
version = "0.1.0"
edition = "2021"
authors = ["Md Sulaiman <dev.sulaiman@icloud.com>"]
description = "A tool for publishing and managing GHCR Docker images from Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khulnasoft-lab/ghcr"
keywords = ["docker", "ghcr", "container", "publish"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }